--- a/css/component.css
+++ b/css/component.css
@@ -71,3 +71,98 @@
     80% {opacity:0;}
     0% {bottom: 100px; opacity:0;}
   }
+
+
+  i{display:inline-block;background-repeat:no-repeat;background-position: center;}
+  .ico-24{width:24px;height:24px;background-size:24px;}
+  .ico-close{background-image:url(../images/ico_close.svg);}
+
+  .btn-s{
+      height:32px;
+      line-height:32px;
+      padding:0 12px;
+  }
+
+  .btn-m{
+      height:40px;
+      line-height:40px;
+      padding:0 16px;
+  }
+
+  .btn-l{
+      height:48px;
+      line-height:48px;
+      padding:0 24px;
+  }
+
+  .btn-xl{
+      height:56px;
+      line-height:56px;
+      padding:0 24px;
+  }
+
+  .btn-default{
+      background-color:#fff;
+      border:1px solid #ddd;
+      border-radius:4px;
+      text-align:center;
+  }
+
+  .btn-primary{
+      background-color:#3182F6;
+      border:1px solid #3182F6;
+      border-radius:4px;
+      text-align:center;
+      color:#fff;
+  }
+
+  .modal{  
+      display:none;                              
+      position:fixed;
+      top:50%;
+      left:50%;
+      transform: translate(-50%, -50%);
+      max-width:100vw;
+      min-width:300px;
+                         
+      border-radius: 8px;
+      background-color:#fff;
+  }
+
+  .modal.on{
+      display:block;
+  }
+
+  .modal-wrap{
+      display:flex;
+      flex-direction:column;
+      max-height:calc(100vh - 40px);
+  }
+
+  .modal .modal-header{
+      position:relative;
+      padding:16px 24px;
+      border-bottom:1px solid #ddd;
+  }
+
+  .modal .modal-header .tit{
+      font-size:20px;
+      font-weight:600;
+  }
+
+  .modal .modal-header .btn_close{
+      position:absolute;
+      top:16px;
+      right:24px;
+  }
+
+  .modal .modal-content{
+      padding:16px 24px;
+      overflow-y: scroll;
+  }
+
+  .modal .modal-footer{
+      padding:16px 24px;
+      border-top:1px solid #ddd;
+      text-align:center;
+  }
