--- a/css/component.css
+++ b/css/component.css
@@ -124,10 +124,10 @@ button{display:inline-block;width:inherit;height:inherit;}
       left:50%;
       transform: translate(-50%, -50%);
       max-width:100vw;
-      min-width:300px;
-                         
+      min-width:300px;                         
       border-radius: 8px;
       background-color:#fff;
+      z-index:1100;
   }
 
   .modal.on{
@@ -166,4 +166,14 @@ button{display:inline-block;width:inherit;height:inherit;}
       padding:16px 24px;
       border-top:1px solid #ddd;
       text-align:center;
+  }
+
+  .overlay{
+      position:fixed;
+      top:0;
+      left:0;
+      width:100%;
+      height:100%;
+      background-color:rgba(0,0,0,.4);
+      z-index:1000;
   }
